--- a/notes/ch01.md
+++ b/notes/ch01.md
@@ -1,13 +1,32 @@
 # 第一章 开始
 
+## 编写一个简单的 C++程序
+
+一个函数的定义包括四部分：
+
+- 函数的返回值类型
+- 函数名称
+- 函数的形参列表（圆括号包围，允许为空）
+- 函数体（花括号包围）
+
+
+
+main 函数的返回值类型必须为 int ，即整数类型。
+
+在大多数系统中，main 的返回值用于指示状态。其中 0 表示成功，非 0 的含义由系统定义，指出具体的错误类型。
+
+
+
 ## 熟悉编译器
 
-**g++**：
+g++：
 
 - 编译：`g++ --std=c++11 ch01.cpp -o main`
 - 运行：`./prog1`
 - 查看运行状态：`echo $?`
 - 编译多个文件:`g++ ch2.cpp Sales_item.cc -o main`
+
+
 
 输入 `g++ --help`，查看编译器选项：
 
@@ -68,8 +87,11 @@ Options:
 
 ```
 
+
+
 输入 `g++ -v --help`可以看到更完整的指令。
 例如还有些常用的：
+
 ```
 -h FILENAME, -soname FILENAME: Set internal name of shared library
 -I PROGRAM, --dynamic-linker PROGRAM: Set PROGRAM as the dynamic linker to use
@@ -77,22 +99,87 @@ Options:
 -L DIRECTORY, --library-path DIRECTORY: Add DIRECTORY to library search path
 ```
 
-**获得程序状态**:
+
+
+获得程序状态：
 
 - windows: ``echo %ERRORLEVEL%``
 - UNIX: ``echo $?``
+- UNIX和Mac下键盘输入文件结束符：`ctrl+d`，Windows下：`ctrl+z`
+
+
 
 ## IO
 
-- ```#include <iostream>```
-- ```std::cout << "hello"```
-- ```std::cin >> v1```
+标准输入输出对象：C++ 没有定义任何输入输出语句，而是通过引用一个标准库来提供 IO 机制。常见的标准库有 iostream 库，其包含了输入流 istream 和输出流 ostream。这里的”流“指的是随着时间的推移，字符是顺序生成或者消耗的。
 
-记住`>>`和`<<`返回的结果都是左操作数，也就是输入流和输出流本身。
+- cin 标准输入（会识别空格）
+- cout 标准输出
+- cerr 输出标准错误
+- clog 输出一般性信息
 
-**endl**：这是一个被称为**操纵符**（manipulator）的特殊值，效果是结束当前行，并将设备关联的缓冲区（buffer）中的内容刷到设备中。
+```
+#include <iostream> // 头文件
 
-UNIX和Mac下键盘输入文件结束符：`ctrl+d`，Windows下：`ctrl+z`
+int main()
+{
+	std::cout << "Hello, World" << std::endl;
+	std::cin >> v1;
+	return 0;
+}
+```
+
+
+
+**输出流** cout：向流写入数据
+
+```
+std::cout << "Hello, World" << std::endl;
+```
+
+每个 << 运算符都只接受两个运算对象，其中左侧必须是 ostream 对象，右侧是打印的内容。<< 运算符会将右侧即要打印的内容，写入到左侧的 ostream 对象中，最终运行的结果就是其左侧 ostream 对象。即，每次的计算结果是写入给定打印内容的那个 ostream 对象。因此，上述链式语句使用了两次 << 运算符，第一个运算结果返回的 std::cout 作为了第二个运算符的左侧运算对象，因此可以视为：
+
+```
+(std::cout << "Hello, World") << std::endl;
+```
+
+等价于
+
+```
+std::cout << "Hello, World";
+std::cout << std::endl;
+```
+
+
+
+**输入流** cin：从流读取数据
+
+``` 
+std::cin >> v1 >> v2;
+```
+
+每个 >> 运算符都只接受两个运算对象，其中左侧必须是 istream 对象，右侧是给定对象。>> 运算符会从左侧读取数据，写入到右侧的给定对象中，最终运行的结果就是其左侧 istream 对象。即，每次的计算结果是被读取内容的那个 istream 对象。因此，上述链式语句使用了两次 >> 运算符，第一个运算结果返回的 std::cin 作为了第二个运算符的左侧运算对象，因此可以视为：
+
+```
+(std::cin >> v1) >> v2;
+```
+
+等价于
+
+```
+std::cin >> v1;
+std::cin >> v2;
+```
+
+
+
+**endl**是一个被称为**操纵符**（manipulator）的特殊值，效果是结束当前行，并将设备关联的缓冲区（buffer）中的内容刷到设备中。
+
+
+
+**命名空间（namespace）**：使用作用域运算符`::`调用。使用命名空间来使用标准库，则每次使用名字时，必须显式说明来自的空间位置。如 std::cout 
+
+
 
 **头文件**：类的类型一般存储在头文件中，标准库的头文件使用`<>`，非标准库的头文件使用`""`。申明写在`.h`文件，定义实现写在`.cpp`文件。
 
@@ -105,9 +192,13 @@ UNIX和Mac下键盘输入文件结束符：`ctrl+d`，Windows下：`ctrl+z`
 #endif
 ```
 
+记住`>>`和`<<`返回的结果都是左操作数，也就是输入流和输出流本身。
+
+
+
 **成员函数（类方法）**：使用`.`调用。
 
-**命名空间（namespace）**：使用作用域运算符`::`调用。
+
 
 ## 注释
 
