--- a/notes/ch01.md
+++ b/notes/ch01.md
@@ -1,6 +1,6 @@
 # 第一章 开始
 
-## 编写一个简单的 C++程序
+## 编写一个简单的 C++ 程序
 
 一个函数的定义包括四部分：
 
@@ -109,7 +109,7 @@ Options:
 
 
 
-## IO
+## 标准库的输入输出流
 
 标准输入输出对象：C++ 没有定义任何输入输出语句，而是通过引用一个标准库来提供 IO 机制。常见的标准库有 iostream 库，其包含了输入流 istream 和输出流 ostream。这里的”流“指的是随着时间的推移，字符是顺序生成或者消耗的。
 
@@ -175,28 +175,11 @@ std::cin >> v2;
 
 **endl**是一个被称为**操纵符**（manipulator）的特殊值，效果是结束当前行，并将设备关联的缓冲区（buffer）中的内容刷到设备中。
 
-
-
-**命名空间（namespace）**：使用作用域运算符`::`调用。使用命名空间来使用标准库，则每次使用名字时，必须显式说明来自的空间位置。如 std::cout 
-
-
-
-**头文件**：类的类型一般存储在头文件中，标准库的头文件使用`<>`，非标准库的头文件使用`""`。申明写在`.h`文件，定义实现写在`.cpp`文件。
-
-**避免多次包含同一头文件**：
-
-```cpp
-#ifndef SALESITEM_H
-#define SALESITEM_H
-// Definition of Sales_itemclass and related functions goes here
-#endif
-```
-
 记住`>>`和`<<`返回的结果都是左操作数，也就是输入流和输出流本身。
 
 
 
-**成员函数（类方法）**：使用`.`调用。
+**命名空间（namespace）**：使用作用域运算符`::`调用。使用命名空间来使用标准库，则每次使用名字时，必须显式说明来自的空间位置。如 std::cout 
 
 
 
@@ -214,13 +197,13 @@ std::cin >> v2;
 
 
 
-## while语句
+## while 语句
 
-循环执行，（直到条件（condition）为假。
+循环执行，直到条件为假。
 
 
 
-## for语句
+## for 语句
 
 循环头由三部分组成：
 
@@ -230,7 +213,67 @@ std::cin >> v2;
 
 
 
-## 使用文件重定向
+## 读取数量不定的输入数据
 
-``./main <infile >outfile``
+```
+while (std::cin >> value)
+```
+
+在该语句中，循环条件实际检测的是 std::cin，只有当遇到文件结束符或者无效输入（读入的值非整数），istream 对象的状态会变为无效，使得条件判断结果为假，终止循环。
+
+
+
+C++ 程序中的每个名字都必须先声明后使用。常见错误是：堆来自标准库的名字忘记使用 std::、标识符名字拼写错误。
+
+
+
+## if 语句
+
+```c++
+#include <iostream>
+
+int main()
+{
+    int currVal = 0, val = 0;
+    // 读取第一个数值，确保有数据可以处理。如果没有直接结束当前程序
+    if (std::cin >> currVal){
+        
+        // 读取剩余数值，并于前一个数值进行比较
+        while (std::cin >> val){
+            if (Val == currVal) {
+                ...
+            }
+        }
+    }
+    return 0;
+}
+```
+
+
+
+每个类实际上可以看作为定义了一个新的类型，其类型名就是类名。类的类型一般存储在头文件中，标准库的头文件使用`<>`，非标准库的头文件使用`""`。申明写在`.h`文件，定义实现写在`.cpp`文件。
+
+
+
+**避免多次包含同一头文件**：
+
+```cpp
+#ifndef SALESITEM_H
+#define SALESITEM_H
+// Definition of Sales_itemclass and related functions goes here
+#endif
+```
+
+
+
+使用文件重定向 ``./main <infile >outfile``
+
+
+
+**成员函数（类方法）**是类中的函数，通常以类对象的名义来，使用点运算符`.`调用成员函数。点运算符有且只能用于类类型的对象——左侧必须是类类型对象名，右侧必须是该类类型的一个成员函数名，原酸结果是右侧运算对象指定的成员。一般情况下，使用点运算符`.`访问成员函数是要调用该函数，调用函数符() 放置的为实参列表，可为空。如：
+
+```
+if( item1.isbn() == item2.isbn() )
+```
+
 
