updata notes_ch2

--- a/notes/ch02.md
+++ b/notes/ch02.md
@@ -1,8 +1,15 @@
 # 第二章 变量和基本类型
 
+C++ 是一种静态数据类型语言，其类型检查发生在编译阶段。编译器负责检查数据类型是否支持要执行的运算。当程序越复杂，静态类型检查越有助于发现问题，因此，编译器必须知道每一个变量对应的数据类型——用户使用变量前必须声明其数据类型。
+
+
+
 ### 基本内置类型
 
 **基本算数类型**：
+
+- 整形（包括字符和布尔类型在内）+浮点型
+- 算术类型的尺寸（即所占比特）在不同机器有所差别
 
 | 类型 | 含义 | 最小尺寸|
 |---|---|---|
@@ -20,68 +27,163 @@
 | `long double` | 扩展精度浮点数 | 10位有效数字 |
 
 
+
 ### 如何选择类型
 
 - 1.当明确知晓数值不可能是负数时，选用无符号类型；
 - 2.使用`int`执行整数运算。一般`long`的大小和`int`一样，而`short`常常显得太小。除非超过了`int`的范围，选择`long long`。
-- 3.算术表达式中不要使用`char`或`bool`。
+- 3.算术表达式中不要使用`char`或`bool`，不同机器下，其类型可能有符号可能无符号。
 - 4.浮点运算选用`double`。
+
+
+
+### 带符号类型和无符号类型
+
+- unsigned int 可简写为 unsigned
+- C++ 标准仅约定在表示范围内正值和负值的量应该平衡
+
+
 
 ### 类型转换
 
-- 非布尔型赋给布尔型，初始值为0则结果为false，否则为true。
-- 布尔型赋给非布尔型，初始值为false结果为0，初始值为true结果为1。
+- 类型转换是程序自动判定的
+- 不宜在算术表达式内使用布尔值：
+  - 非布尔型赋给布尔型，初始值为0则结果为false，否则为true。
+  - 布尔型赋给非布尔型，初始值为false结果为0，初始值为true结果为1。
+- 无符号类型赋值超出范围，结果为初始值对无符号类型表示数值总数取模后的余数。
+- 带符号类型赋值超出范围，结果不可知。
+
+
+
+### 含有无符号类型的表达式
+
+- 无符号类型和有符号类型进行算术运算时，有符号数会被自动转换为无符号数（和把有符号数直接赋给无符号变量的过程一样）
+- 当有符号类型为负数时，把负数转换成无符号数类似于直接给无符号数赋一个负值，结果等于整个负数加上无符号数的模。
+
+```
+unsigned u = 10;
+int i = -42;
+std::cout << i+i << std::endl; // 结果是 -84
+std::cout << i+u << std::endl; // 若 int 占 32 位，结果为 4294967264
+```
+
+- 无符号数减去一个值（无论是否为无符号数），结果不能是负值
+
+```
+unsigned u1 = 42, u2 = 10;
+std::cout << u1-u2 << endl; // 结果为 32
+std::cout << u2-u1 << endl; // 结果为取模后的值
+```
+
+- 循环中涉及到无符号数的写法（比要输出的最大数大于 1 开始，且注意判断条件循环体的写法）
+
+```
+// 错误写法，先自减再判断——当 u = 0 并输出后，会继续进行自减操作再执行判断，但由于是无符号类型，u 始终不可能是小于 0
+for (unsigned u = 10; u >= 0; --u)
+	std::cout << u << std::endl;
+	
+// 正确写法1，先判断再自减——当 u = 0 时，不符合条件会直接中断循环
+for (unsigned u = 11; u > 0;)
+{
+	--u;
+	std::cout << u << std::endl;
+}
+
+// 正确写法2，先判断再自减——当 u = 0 时，不符合条件会直接中断循环
+unsigned u = 11;
+while (u > 0)
+{ 
+	--u;
+	std::cout << u << std::endl;
+}
+```
+
+
 
 ### 字面值常量
 
 - 一个形如`42`的值被称作**字面值常量**（literal）。
   - 整型和浮点型字面值。
+  
+    - 八进制以 0 开头，十六进制以 0x 或 0X 开头
+    - 默认情况下，十进制是带符号类型，八进制和十六进制无法确定。
+    - 严格来说，十进制字面值中的符号不属于字面值，该负号的作用仅仅是对字面值取负值。
+  
   - 字符和字符串字面值。
     - 使用空格连接，继承自C。
     - 字符字面值：单引号， `'a'`
-    - 字符串字面值：双引号， `"Hello World""`
+    - 字符串字面值：双引号， `"Hello World""`，本质上是由常量字符构成的数组，结尾处以`'\0'`结束，所以字符串类型实际上长度比内容多 1
     - 分多行书写字符串。
       ```
       std:cout<<"wow, a really, really long string"
                 "literal that spans two lines" <<std::endl;
       ```
-  - 转义序列。`\n`、`\t`等。
+    
+  - 转义序列。`\n`、`\t`等。注意的是，\1234 表示八进制数 123 对应的字符以及 4，\x1234 表示十六进制数 1234 对应的字符
+  
   - 布尔字面值。`true`，`false`。
+  
   - 指针字面值。`nullptr`
-
-> 字符串型实际上时常量字符构成的数组，结尾处以`'\0'`结束，所以字符串类型实际上长度比内容多1。
+  
+    
 
 ## 变量
 
-**变量**提供一个**具名**的、可供程序操作的存储空间。   `C++`中**变量**和**对象**一般可以互换使用。
+**变量**提供一个**具名**的、可供程序操作的存储空间。   `C++`中**变量**和**对象**（存储数据并具有某种类型的内存空间）一般可以互换使用。
 
 ### 变量定义（define）
 
 - **定义形式**：类型说明符（type specifier） + 一个或多个变量名组成的列表。如`int sum = 0, value, units_sold = 0;`
+
 - **初始化**（initialize）：对象在创建时获得了一个特定的值。
-  - **初始化不是赋值！**：
-  - 初始化 = 创建变量 + 赋予初始值
-  - 赋值 = 擦除对象的当前值 + 用新值代替
-  - **列表初始化**：使用花括号`{}`，如`int units_sold{0};`
-  - 默认初始化：定义时没有指定初始值会被默认初始化；**在函数体内部的内置类型变量将不会被初始化**。
+  - 在同一定义语句中，可以用先定义的变量去初始化后定义的其他变量。
+  
+  ```
+  double price = 109.99, discount = price * 0.16; 
+  ```
+  
+  - **初始化不是赋值**：初始化是创建变量时赋予其初始值，赋值是擦除对象的当前值，并用新值代替
+  - **列表初始化**：使用花括号`{}`初始化，当存在丢失信息危险时，编译器将拒绝初始化请求
+  
+  ```
+  int units_sold = 0 等价于 int units_sold = {0} 等价于 int units_sold{0} 等价于 int units_sold(0) 
+  
+  long double ld = 3.141592653;
+  int a{ld}, b = {ld]};	// 不可执行，编译器拒绝
+  int c(ld), d = ld;		// 可执行，但丢失精度
+  ```
+  
+  - 默认初始化：函数体之外定义时没有指定初始值会被默认初始化为 0；**函数体内部的内置类型变量将不会被初始化**，其值未定义不可知。
   - 建议初始化每一个内置类型的变量。
 
 ### 变量的**声明**（declaration） vs **定义**（define）
-  - 为了支持分离式编译，`C++`将声明和定义区分开。**声明**使得名字为程序所知。**定义**负责创建与名字关联的实体。
+  - 为了支持分离式编译，`C++`将声明和定义区分开。**声明**使得类型和名字为程序所知。**定义**负责创建与名字关联的实体（申请存储空间并赋初始值）。
   - **extern**：只是说明变量定义在其他地方。
-  - 只声明而不定义： 在变量名前添加关键字 `extern`，如`extern int i;`。但如果包含了初始值，就变成了定义：`extern double pi = 3.14;`
-  - 变量只能被定义一次，但是可以多次声明。定义只出现在一个文件中，其他文件使用该变量时需要对其声明。
-- 名字的**作用域**（namescope）`{}`
-  - **第一次使用变量时再定义它**。
-  - 嵌套的作用域
-    - 同时存在全局和局部变量时，已定义局部变量的作用域中可用`::reused`显式访问全局变量reused。
-    - **但是用到全局变量时，尽量不适用重名的局部变量。**
+  - 只声明而不定义， 在变量名前添加关键字 `extern`，如
 
-#### 变量命名规范
-1. 需体现实际意义
-2. 变量名用小写字母
-3. 自定义类名用大写字母开头：Sales_item
-4. 标识符由多个单词组成，中间须有明确区分：student_loan或studentLoan，不要用studentloan。
+```
+extern int i;	// 声明非定义
+int j;			// 声明并定义
+```
+
+  - 声明如果显式初始化，就变成了定义：`extern double pi = 3.14;`
+  - 变量只能被定义一次，但是可以多次声明。定义只出现在一个文件中，其他文件使用该变量时需要对其声明且不可重复定义（直接赋值或调用即可）。
+- 名字的**作用域**（namescope）`{}`
+  - **第一次使用变量时再定义它**
+
+  - 允许在内层作用域中重新定义外层作用域的名字
+
+  - 用到全局变量时，尽量不适用重名的局部变量。当全局变量和局部变量同名时，可以用作用域符`::`指定对应作用域，显式访问全局变量。如果全局作用域本身没有名字（如最外层全局区），作用域符左侧可为空。如 `std:: cout << ::reused << std::endl;`
+
+    
+
+### 变量命名规范
+- 需体现实际意义
+- 变量名用小写字母
+- 自定义类名用大写字母开头：Sales_item
+- 标识符由多个单词组成，中间须有明确区分：下划线相连 student_loan 或驼峰 studentLoan，不要用 studentloan 也不要下划线和驼峰并用。
+
+
 
 ## 左值和右值
 
