--- a/notes/ch02.md
+++ b/notes/ch02.md
@@ -196,60 +196,109 @@ int j;			// 声明并定义
 ### 引用
 
 > 一般说的引用是指的左值引用
-- **引用**：引用是一个对象的别名，引用类型引用（refer to）另外一种类型。如`int &refVal = val;`。
-- 引用必须初始化。
-- 引用和它的初始值是**绑定bind**在一起的，而**不是拷贝**。一旦定义就不能更改绑定为其他的对象
+- 引用不是对象，而是为一个已存在的对象起别名，引用类型引用（refer to）另外一种类型。如`int &refVal = val;`。
+- 引用定义时必须初始化，一旦初始化就不能更改绑定为其他的对象
+- 引用和它的初始值是**绑定bind**在一起的，而**不是简单拷贝**。初始值可以是另一个引用但不可以为字面值或者某个表达式运算结果。
+- 引用的数据类型必须与要绑定的对象的数据类型相匹配
+- 由于两位一体，为引用赋值就是给绑定的对象赋值；获取引用值就是获取绑定的对象值；把引用作为初始值就是获取该引用绑定的对象的值
+
+```
+int val = 1024;
+int &refVal = val;		//	refVal = 1024 val = 1024
+
+refVal = 2048;			//	refVal = 2048 val = 2048
+int &refVal2 = refval;	//	refVal = 2048 val = 2048 refVal2 = 2048 
+```
+
+
 
 ### 指针
 
 > int *p;      //**指向int型对象**的指针
 
 - 是一种 `"指向（point to）"`另外一种类型的复合类型。
-
-- **定义**指针类型： `int *ip1;`，**从右向左读有助于阅读**，`ip1`是指向`int`类型的指针。
-
-- 指针存放某个对象的**地址**。
-
+- `int* p1, p2; //*是对p1的修饰，所以 p1是 int 型指针，但p2是int型变量`
+- 指针和引用的区别：引用本身并非一个对象，引用定义后就不能绑定到其他的对象了；指针并没有此限制，相当于变量一样使用；指针无须在定义时赋初值。
 - 获取对象的地址： `int i=42; int *p = &i;`。 `&`是**取地址符**。
-
-- 指针的类型与所指向的对象类型必须一致（均为同一类型int、double等）
-
-- 指针的值的四种状态：
+- 指针的数据类型必须与要指向的对象的数据类型相匹配（均为同一类型int、double等）
+- **定义**指针类型： `int *ip1;`，**从右向左读有助于阅读**，`ip1`是指向`int`类型的指针。
+- 指针的值的四种状态：（**对无效指针的操作均会引发错误，第二种和第三种虽为有效的，但理论上是不被允许的**）
   - 1.指向一个对象；
   - 2.指向紧邻对象的下一个位置；
   - 3.空指针；
   - 4.无效指针。
-  - >**对无效指针的操作均会引发错误，第二种和第三种虽为有效的，但理论上是不被允许的**
-  
 - 指针访问对象： `cout << *p;`输出p指针所指对象的数据， `*`是**解引用符**。
-
-- 空指针不指向任何对象。使用`int *p=nullptr;`来使用空指针。
-
-- > 指针和引用的区别：引用本身并非一个对象，引用定义后就不能绑定到其他的对象了；指针并没有此限制，相当于变量一样使用。
-
-- > 赋值语句永远改变的是**左侧**的对象。
-
-- `void*`指针可以存放**任意**对象的地址。因无类型，仅操作内存空间，对所存对象无法访问。
-
-- 其他指针类型必须要与所指对象**严格匹配**。
-
+- 空指针不指向任何对象。使用`int *p=nullptr;`来使用空指针。不建议使用 int *p = 0 或 int *p = NULL
+- 建议初始化所有指针，尽量等定义了对象之后再定义指向它的指针。未知指向的指针可初始化为 nullptr。
+- 赋值语句永远改变的是**左侧**的对象。
+- `void*`指针可以存放**任意**对象的地址。因无类型，仅操作内存空间，对所存对象无法直接操作。其他指针类型必须要与所指对象**严格匹配**。
 - 两个指针相减的类型是`ptrdiff_t`。
+- 两个类型相同的合法指针可以直接比较，比较结果是布尔类型。比较的依据是地址值。相同则相等，不同则不等。相同存在三种可能：都为空、都指向同一个对象、都指向同一个对象的下一个地址。
+- 引用本身不是对象，不能定义指向引用的引用。但存在对指针的引用。
 
-- 建议：初始化所有指针。
+```
+int i = 42;
+int *p;
+int *&r = p;	// 从右往左看，最近的 & 具有最直接影响，表示 r 是一个引用，* 表明其引用类型是指针，最后的 int 表面 r 引用的是一个 int 数据类型的指针。r 和 p 是两位一体
 
-- `int* p1, p2;//*是对p1的修饰，所以p2还是int型`
+r = &i;			// r 和 p 都指向 i 都为 42
+*r = 0;			// r 和 p 和 i 都为 0
+```
+
+
+
+### 声明
+
+- 一条声明语句由一个基本数据类型和紧随其后的一个声明符列表组成。其中每个声明符命名了一个变量并指定该变量为与基本数据类型有关的某种类型。
+
+- 一个定义语句可以定义出基本数据类型一样，但不同类型的变量
+
+```
+int i = 1024, *p = &i, &r = i;
+```
+
+涉及指针或引用的声明写法
+
+```
+int *p1, *p2;
+
+int *p1;
+int *p2;
+```
+
+
 
 ## const限定符
 
 - 动机：希望定义一些不能被改变值的变量。
 
 ### 初始化和const
-- const对象**必须初始化**，且**不能被改变**。
-- const变量默认不能被其他文件访问，非要访问，必须在指定const定义之前加extern。要想在多个文件中使用const变量共享，定义和声明都加const关键字即可。
+- const对象**必须初始化**，且**不能被改变**，其初始值可以是任意复杂的表达式。
+
+```
+const int i = get_size();	// 运行时初始化
+const int j = 42;			// 编译时初始化，类似 define，在编译阶段把所有用到 j 的地方直接替换为 42
+```
+
+- const变量默认仅在当前文件内有效，其他文件出现同名的 const 变量属于独立定义的变量，互不影响。如果需要多文件直接共享 const 对象，必须在const变量的声明和定义之前加extern关键字。要想在多个文件中使用const变量共享，定义和声明都加const关键字即可。
 
 ### const的引用
 
 - **reference to const**（对常量的引用）：指向const对象的引用，如 `const int ival=1; const int &refVal = ival;`，可以读取但不能修改`refVal`。
+- 不允许非常量引用指向一个常量对象
+
+```
+const int c1 = 42;
+int &r2 = c1;
+```
+
+- 常量引用仅对可参与操作做出限定，对于引用对象本身未作限定。因此，允许常量引用指向一个非常量对象、字面值或者是一般表达式
+
+```
+int c1 = 42;
+const int &r2 = c1;
+```
+
 - **临时量**（temporary）对象：当编译器需要一个空间来暂存表达式的求值结果时，临时创建的一个未命名的对象。
 - 对临时量的引用是非法行为。
 
