updata notes_ch02

--- a/notes/ch02.md
+++ b/notes/ch02.md
@@ -199,7 +199,7 @@ int j;			// 声明并定义
 - 引用不是对象，而是为一个已存在的对象起别名，引用类型引用（refer to）另外一种类型。如`int &refVal = val;`。
 - 引用定义时必须初始化，一旦初始化就不能更改绑定为其他的对象
 - 引用和它的初始值是**绑定bind**在一起的，而**不是简单拷贝**。初始值可以是另一个引用但不可以为字面值或者某个表达式运算结果。
-- 引用的数据类型必须与要绑定的对象的数据类型相匹配
+- 引用的数据类型必须与要绑定的对象的数据类型相匹配（常用引用例外）
 - 由于两位一体，为引用赋值就是给绑定的对象赋值；获取引用值就是获取绑定的对象值；把引用作为初始值就是获取该引用绑定的对象的值
 
 ```
@@ -220,7 +220,7 @@ int &refVal2 = refval;	//	refVal = 2048 val = 2048 refVal2 = 2048
 - `int* p1, p2; //*是对p1的修饰，所以 p1是 int 型指针，但p2是int型变量`
 - 指针和引用的区别：引用本身并非一个对象，引用定义后就不能绑定到其他的对象了；指针并没有此限制，相当于变量一样使用；指针无须在定义时赋初值。
 - 获取对象的地址： `int i=42; int *p = &i;`。 `&`是**取地址符**。
-- 指针的数据类型必须与要指向的对象的数据类型相匹配（均为同一类型int、double等）
+- 指针的数据类型必须与要指向的对象的数据类型相匹配（常量指针、指针常量例外）
 - **定义**指针类型： `int *ip1;`，**从右向左读有助于阅读**，`ip1`是指向`int`类型的指针。
 - 指针的值的四种状态：（**对无效指针的操作均会引发错误，第二种和第三种虽为有效的，但理论上是不被允许的**）
   - 1.指向一个对象；
@@ -305,7 +305,31 @@ const int &r2 = c1;
 ### 指针和const
 
 - **pointer to const**（指向常量的指针）：不能用于改变其所指对象的值, 如 `const double pi = 3.14; const double *cptr = &pi;`。
-- **const pointer**：指针本身是常量，也就是说指针固定指向该对象，（存放在指针中的地址不变，地址所对应的那个对象值可以修改）如 `int i = 0; int *const ptr = &i;`
+- 指针长仅对可参与操作做出限定，对于指向对象本身未作限定。因此，允许指针常量指向一个非常量对象、字面值或者是一般表达式
+- 不允许通过指针常量修改指向对象的值
+
+```
+const int c1 = 42;
+int c2 = 43;
+const int *r2 = &c1;
+
+*r2 = 100;	// 不允许，指针常量不允许修改指向对象的数值，且 c1 本身也是常量不支持修改
+r2 = &c2;	//	允许，但无法通过 r2 去修改 c2 的值，即便 c2 不是常量，仍旧报错
+```
+
+- **const pointer**（常量指针）：指针本身是常量，也就是说指针固定指向该对象，（存放在指针中的地址不变，地址所对应的那个对象值可以修改）如 `int i = 0; int *const ptr = &i;`
+- 常量指针必须初始化，且初始化后无法再修改值（指针内部存放的地址），即无法再次更改指向对象
+
+```
+const int c1 = 42;
+int c2 = 43;
+int * const r2 = &c1;
+
+*r2 = 100;	// 允许，但 c1 本身是常量不支持修改，仍旧报错
+r2 = &c2;	//	不允许，指针常量无法修改指向对象
+```
+
+
 
 ### 顶层const
 
